--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     implementation files('libs/bos-android-sdk-1.0.3.jar')
     compile 'cn.jiguang.sdk:jpush:3.1.0'
     compile 'cn.jiguang.sdk:jcore:1.1.8'
+    implementation files('libs/umeng-analytics-7.4.0.jar')
+    implementation files('libs/umeng-common-1.4.0.jar')
 }
