--- a/app/src/main/assets/config/config.json
+++ b/app/src/main/assets/config/config.json
@@ -1,7 +1,7 @@
 {
   "debug":"false",
   "is_auto_login":"false",
-  "server_url":"https://openapi.codoon.com/api",
+  "umeng_appkey":"56f24a5967e58eab45000f06",
   "param_convert":"com.lemon.carmonitor.convert.param",
   "result_convert":"com.lemon.carmonitor.convert.result",
   "convert_ext":"Convert",
