--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     signingConfigs {
@@ -64,4 +65,6 @@ dependencies {
     compile 'cn.jiguang.sdk:jcore:1.1.8'
     implementation files('libs/umeng-analytics-7.4.0.jar')
     implementation files('libs/umeng-common-1.4.0.jar')
+    compile 'org.greenrobot:greendao:3.2.2'
+    compile 'com.github.kingideayou:SlideBottomPanel:1.0.6'
 }
